--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -13,7 +13,7 @@
         <meta property="og:url" content="https://silverchips.mbhs.edu">
         <meta property="og:image" content="/static/blurb.png"/>
         <meta name="theme-color" content="#ffffff">
-        <title>{% block title %}{% endblock %} | Silver Chips</title>
+        <title>{% block title %}{% endblock %} | Silver Chips Online</title>
 
         <link rel="shortcut icon" href="{% static "favicon.ico" %}">
         {% include "home/includes/head.html" %}
@@ -32,7 +32,6 @@
 
     <body>
         {% include "home/includes/navbar.html" %}
-
         {% block content %}
         {% endblock %}
 
