--- a/home/templates/home/content/display.html
+++ b/home/templates/home/content/display.html
@@ -8,7 +8,7 @@
   {% if not content.hide_caption and content.description %}
     <p class="text-muted text-center">
       <small>
-        {{ content.descriptor }}: {{ content.description|safe }}{% if embedding and content.has_authors %}<em>&nbsp;{{ content.descriptor }} courtesy of {{ content|author_list }}.</em>{% endif %}
+        {{ content.description|safe }}{% if embedding and content.has_authors %}<em>&nbsp;{{ content.descriptor }} courtesy of {{ content|author_list }}.</em>{% endif %}
       </small>
     </p>
   {% endif %}
