--- a/home/templates/home/includes/index-sm-sidebar.html
+++ b/home/templates/home/includes/index-sm-sidebar.html
@@ -15,12 +15,12 @@
         </a>
     </li>
     <li>
-        <a target="_blank" href="http://instagram.com/scophotostaff">
+        <a target="_blank" href="https://www.instagram.com/silverchips_online/">
             <i class="fab fa-instagram"></i><span>Instagram</span>
         </a>
     </li>
     <li>
-        <a target="_blank" href="https://www.youtube.com/channel/UChQKJ8Jyaw6tgZUWha6SFSg">
+        <a target="_blank" href="https://www.youtube.com/@SilverChipsOnline">
             <i class="fab fa-youtube"></i><span>Youtube</span>
         </a>
     </li>
