--- a/home/templates/home/includes/index-sm-sidebar.html
+++ b/home/templates/home/includes/index-sm-sidebar.html
@@ -24,4 +24,8 @@
             <i class="fab fa-youtube"></i><span>Youtube</span>
         </a>
     </li>
+    <li>
+	<a target = "_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdkZWI8TbmCAPn9ov_IBX_Yn6R5Y-ToupZr7VZiOBBAcf3Rsw/viewform">
+	    <i class="fas fa-solid fa-lightbulb"></i><span>Idea Form</span>
+    </li>
 </ul>
