--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -28,6 +28,7 @@
 
           gtag('config', 'UA-128708283-1');
         </script>
+     	<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js"></script>
     </head>
 
     <body>
@@ -37,5 +38,6 @@
 
         {% email_deobfuscator %}
         {% include "home/includes/footer.html" %}
+    
     </body>
 </html>
